[tool]
[tool.poetry]
name = "bpagooglesheets"
version = "1.0.3"
description = "Download Googlesheet using Googlesheets API credentials"
license = "GPL3"
homepage = "https://github.com/BioplatformsAustralia/bpa-googlesheets"
authors = ["Matthew Mulholland <matt@redboxresearchdata.com.au> <info@redboxresearchdata.com.au>"]

[tool.poetry.scripts]
bpa-googlesheets = 'bpagooglesheets.cli:main'

[tool.poetry.dependencies]
python = ">=3.6.1"
black = "==19.10b0"
google-api-python-client = "==1.12.8"
numpy = "==1.19.4"
pandas = "==1.1.5"
